# agentic-rag-app

./: .dockerignore  .editorconfig  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yaml  flowchart.mermaid  pyproject.toml  requirements.txt
.github/workflows/: build_agent_image.yaml
agent/: .example.env  README.md  pyproject.toml  service-account-key-example.json
agent/resources/: test-1.js  test-2.js
agent/src/: app.py
agent/src/vector_store/: chromadb.py  vertexai_vector_search.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json
frontend/actions/: api.ts
frontend/app/: page.tsx
frontend/components/: ChatInputForm.tsx  ChatMessages.tsx  FileUpload.tsx  TypingIndicator.tsx
frontend/types/: chat.ts
src/: agentic_rag.py  app.py  prompts.py  utils.py  vector_store_.py
src/document_processors/: javacript_code_processor.py  pdf_processor.py
src/tools/: retriever.py
src/tools/javascript_executor/: tool.py
